# api-fetcher

./: .gitignore  README.md  pyproject.toml  sample.py
.github/: README.md
api-collector/: dag.py
fetcher/: main.py
fetcher/config/: board.yaml
fetcher/lib/: api_client.py  reader.py
fetcher/models/: board.py
fetcher/payload/: body.py
fetcher/payload/bodies/: board_body.py
fetcher/utils/: data_utils.py
infra/mocking-server/: Dockerfile  go.mod  go.sum  main.go
tests/config/: valid_config.yaml
tests/lib/: test_api_client.py  test_reader.py
