[project]
name = "api-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.6.2",
    "pydantic==1.10.9",
    "pyyaml==6.0",
    "requests==2.31.0",
    "ruff>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
]
